version 4 pi